--- a/requirements.txt
+++ b/requirements.txt
@@ -73,7 +73,7 @@ python-dateutil==2.8.2
 pytweening==1.0.4
 pytz==2021.3
 pytz-deprecation-shim==0.1.0.post0
-pywin32==303
+#pywin32==303
 pywinpty==1.1.6
 pyzmq==22.3.0
 requests==2.26.0
