--- a/requirements.txt
+++ b/requirements.txt
@@ -74,7 +74,7 @@ pytweening==1.0.4
 pytz==2021.3
 pytz-deprecation-shim==0.1.0.post0
 #pywin32==303
-pywinpty==1.1.6
+#pywinpty==1.1.6
 pyzmq==22.3.0
 requests==2.26.0
 scikit-learn==1.0.2
